src/test/deca/syntax/valid/test_dir/added/parser/unary_expr_second_deriv.deca
{
  !5.0; !("Hello World !"); !(x / 50); !readInt(); !(new A()); !f(true);
  !!"Hello"; !!(50.0); !!(x * 50); !!readInt(); !!((int) (x)); !!f(1);
}
