src/test/deca/syntax/invalid/parser/oracle/field_end2.deca
class A { int a = 1; int a (){}; int a = 0}
